<resources>

    <!--region APP-WIDE/TOOLBAR STRINGS-->
    <string name="m_app_name">CST2335 Final Project</string>
    <string name="m_toolbar_guide">Toolbar Guide:</string>

    <string name="m_menu_exercise">Activity Tracker</string>
    <string name="m_menu_food">Food Nutrition Tracker</string>
    <string name="m_menu_thermostat">House Thermostat</string>
    <string name="m_menu_automobile">Automobile</string>
    <!--endregion-->

    <!--region MAIN/LAUNCHER ACTIVITY STRINGS-->
    <string name="m_activityTrackerButtonText">Launch Activity Tracker</string>
    <string name="m_activityTrackerDescriptionText">Enter and track your workouts, including duration.</string>

    <string name="m_nutritionTrackerButtonText">Launch Nutrition Tracker</string>
    <string name="m_nutritionTrackerDescriptionText">Track your food intake and analyse its nutritional value.</string>

    <string name="m_thermostatProgramButtonText">Launch Thermostat Programmer</string>
    <string name="m_thermostatProgramDescriptionText">Create rules to manage your home\'s thermostat schedule.</string>

    <string name="m_carTrackerButtonText">Launch Car Fuel Tracker</string>
    <string name="m_carTrackerDescriptionText">Record gasoline purchases and view summary information and trends.</string>
    <!--endregion-->

    <!--region CAR/FUEL TRACKER ACTIVITY STRINGS-->

    <string name="c_CarTrackerActivity">Car Tracker Activity</string>
    <string name="c_LblLoading">Loading</string>
    <string name="c_changesSaved">Changes saved successfully</string>
    <string name="c_detailsAdded">Entry added successfully</string>


    <string name="c_Ok">OK</string>
    <string name="c_Cancel">Cancel</string>

    <string name="c_Yes">Yes</string>
    <string name="c_No">No</string>

    <string name="c_BtnAddPurchase">Add Entry</string>
    <string name="c_BtnAdd">Add</string>

    <string name="c_BtnViewFuelStats">View Fuel Purchase Statistics</string>
    <string name="c_LblPrice">Price ($/L)</string>
    <string name="c_LblLitres">Liters (L)</string>
    <string name="c_LblKilometers">Distance (km)</string>
    <string name="c_LblDate">Date (dd/mm/yyyy)</string>

    <string name="c_LblPriceHeading">Price\n($/L)</string>
    <string name="c_LblLitresHeading">Liters\n(L)</string>
    <string name="c_LblKilometersHeading">Distance\n(km)</string>
    <string name="c_LblDateHeading">Date\n(dd/mm/yyyy)</string>

    <string name="c_AlertFillFieldsAdd">Please fill in all fields before adding an entry</string>
    <string name="c_AlertFillFieldsEdit">Please fill in all fields before saving an entry</string>

    <string name="c_AddDetailsTitle">Add Fuel Details</string>
    <string name="c_BtnAddDetails">Add</string>

    <string name="c_EditDetailsTitle">Edit Fuel Details</string>
    <string name="c_BtnSaveDetails">Save</string>

    <string name="c_DeleteDetailsTitle">Delete Fuel Details</string>
    <string name="c_AlertDeleteDetailsMsg">Are you sure you want to delete this entry?</string>
    <string name="c_DeleteSuccessful">Entry deleted successfully</string>


    <string name="c_lastMonthStats">Last Month\'s Statistics</string>
    <string name="c_PriceLastMonth">Average Gas Price:</string>
    <string name="c_PurchasedLastMonth">Total Gas Purchased:</string>
    <string name="c_avgGasPurchHist">Gas Purchase History</string>
    <string name="c_avgGasPurchHistNone">You currently have no gas purchase history</string>


    <string-array name="c_months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="c_home">Home</string>
    <string name="c_help">Help</string>
    <string name="c_done">Done</string>
    <string name="c_helpMenu">
        \t<b>Author:</b>\tNathan Doef\n
        \t<b>Activity Version Number:</b>\t3\n
        \t<b>Languages Supported:</b>\tEnglish\tFrench\n\n
        \t<b>Instructions:</b>\n
        \t\u2022 Edit an entry by tapping a row\n
        \t\u2022 Delete an entry by tapping the red minus icon\n
        \t\u2022 Add an entry by tapping the \'Add Entry\' button\n
        \t\u2022 Tap the \'View Fuel Purchase Statistics\'\n\t\tto view past fuel statistics\n
        \t\u2022 Return home by tapping the \'Home\' button
    </string>

    <!--endregion-->

    <!--region NUTRITION TRACKER ACTIVITY STRINGS-->

    <string name="n_ValidateDialogTitle">Please try again.</string>

    <string name="n_ValidateDialogMessage">You must enter a food name or description.</string>

    <string name="n_OK">OK</string>

    <string name="n_EditToastMessage">Food item has been edited.</string>

    <string name="n_AboutTitle">Nutrition Tracker</string>

    <string name="n_AboutMessage">Top menu: Return to home, rotate activities, About\nBottom menu: Add item, order items, stats\n\nVersion 1.0 by Neil Gagne</string>

    <string name="n_FoodAddedToast">Food item has been added.</string>

    <string name="n_FoodNameOrDesc">Food Name or Description:</string>

    <string name="n_Calories">Calories:</string>

    <string name="n_Carbs">Carbs:</string>

    <string name="n_Fat">Fat:</string>

    <string name="n_Comments">Comments:</string>

    <string name="n_Edit">EDIT</string>

    <string name="n_Close">CLOSE</string>

    <string name="n_LogFood">Log Food</string>

    <string name="n_Cancel">Cancel</string>

    <string name="n_Delete">Delete</string>

    <!-- <string name="n_ValidateDialogTitle">Veuillez réessayer.</string> <string name="n_ValidateDialogMessage">Vous devez entrer un nom ou une description d\'aliment.</string> <string name="n_OK">OK</string> <string name="n_EditToastMessage">L\'article alimentaire a été modifié.</string> <string name="n_AboutTitle">Nutrition Tracker</string> <string name="n_AboutMessage">Menu principal: Retour à la page d\'accueil, rotation des activités, À propos de \nDomaine de menu: Ajouter un élément, éléments de commande, statistiques \n\nVersion 1.0 par Neil Gagné</string> <string name="n_FoodAddedToast">Un aliment a été ajouté</string> <string name="n_FoodNameOrDesc">Nom de l\'aliment ou description:</string> <string name="n_Calories">Calories:</string> <string name="n_Carbs">Les glucides:</string> <string name="n_Fat">Graisse:</string> <string name="n_Comments">Commentaires:</string> <string name="n_Edit">MODIFIER</string> <string name="n_Close">FERMER</string> <string name="n_LogFood">Bûche</string> <string name="n_Cancel">Annuler</string> <string name="n_Delete">Effacer</string> -->
    <!--endregion-->

    <!--region THERMOSTAT RULE ACTIVITY STRINGS-->
    <!-- for thermostat activity layouts -->
    <string name="t_currentActivityText" translatable="false"> </string>
    <string name="t_addButtonText">Add New Rule To List</string>
    <string name="t_editButtonText">Delete Rule(s) From List</string>
    <string name="t_ruleText">test</string>
    <string name="t_helpMenuTitleText">Thermostat Rule Manager Help Menu</string>
    <string name="t_helpMenuText">
        \t<b>Author:</b>\tJoe Ireland\n
        \t<b>Activity Version Number:</b>\t2\n
        \t<b>Languages Supported:</b>\tEnglish\tFrench\n\n
        \t<b>Instructions:</b>\n
        \t\u2022 Edit Rule:\t Tap the rule in the list.\n
        \t\u2022 Delete Rule:\t Tap the red \'minus\' button\n\t\tto the left of the rule.\n
        \t\u2022 Add Rule:\t Tap \'Add Rule\' button\n
        \t\u2022 Return home by tapping the \'Home\' button
    </string>
    <string name="t_helpDoneButtonText">Done</string>

    <!-- for landscape thermostat activity -->
    <string name="t_frameLayoutPlaceholderText">Rule Details will\nbe displayed here.\n\n
                                                Click "Add" or Select a Row\nfrom the List on the Left.</string>

    <!-- Strings shared by Thermostat Add and Edit dialogs -->
    <string name="t_dayLabel">On: </string>
    <string name="t_timeLabel">At: </string>
    <string name="t_separatorLabel">:</string>
    <string name="t_setTempLabel">Set Temperature To:</string>
    <string name="t_degreesLabel">°C</string>
    <string name="t_manualEntryLabelText">Or, type the rule in manually:</string>
    <string name="t_manualEntryHintText">Monday 6:00 Temp -> 20</string>
    <string name="t_manualEntryFormatLabelText">Follow Format: Monday 6:00 Temp -> 20</string>
    <string-array name="t_daysArray">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>


    <!-- for edit dialog -->
    <string name="t_saveEditChangesButtonText">Save\nChanges</string>
    <string name="t_discardEditChangesButtonText">Discard\nChanges</string>
    <string name="t_saveNewRuleEditChangesButtonText">Save Changes\nAs New Rule</string>
    //activity tracker strings
    <string-array name="a_typeArray">
        <item>Running</item>
        <item>Walking</item>
        <item>Biking</item>
        <item>Swimming</item>
        <item>Skating</item>
    </string-array>
    <string name="a_details_activityType">Activity: </string>
    <string name="a_details_Duration">Duration: </string>
    <string name="a_details_Comments">Comments: </string>
    <string name="a_details_confirmButton">Confirm</string>
    <string name="a_details_deleteButton">Delete</string>
    <string name="a_details_cancelButton">Cancel</string>
    <string name="a_main_addButton">Add New Activity</string>
    <string name="a_main_snackbarText">Message Deleted</string>
    <string name="a_main_toastText">Successfully added acitivty!</string>
    <string name="a_main_statsButton">Monthly statistics</string>
    <string name="a_alert_statsString">Monthly Average Activity: %1$f\nTotal this Month: %2$f</string>
    <string name="a_alert_title">Statistics</string>
    <string name="a_help_title">Activity Tracker Help</string>
    <string name="a_help_content">Activity Tracker v1 \nby Nicholas Crawford\nPress the add button to add a new activity \nTap on an activity to see details. From here you can edit the activity or delete it
        \nTap on the statistics button to see monthly statistics</string>
    <string name="a_ok">OK</string>

    <!-- for add dialog -->
    <string name="t_saveAddRuleButtonText">Save\nNew Rule</string>
    <string name="t_discardAddRuleButtonText">Discard\nNew Rule</string>

    <!--endregion-->

    <!--region ACTIVITY TRACKER ACTIVITY STRINGS-->
    <!--endregion-->
</resources>