<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_exercise"
        android:title="@string/m_menu_exercise"
        android:icon="@drawable/icons8_running_50"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_food"
        android:title="@string/m_menu_food"
        android:icon="@drawable/icons8_vegetarian_food_50"
        android:orderInCategory="150"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_thermostat"
        android:title="@string/m_menu_thermostat"
        android:icon="@drawable/icons8_temperature_inside_50"
        android:orderInCategory="200"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_automobile"
        android:title="@string/m_menu_automobile"
        android:icon="@drawable/icons8_gas_station_50"
        android:orderInCategory="250"
        app:showAsAction="always"/>
</menu>