<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_details_activityType" />


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/a_newTypeSpinner"></Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_details_Duration" />

    <EditText
        android:id="@+id/a_newDurationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_details_Comments" />

    <EditText
        android:id="@+id/a_newCommentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="easy" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/a_newConfirmButton"
        android:text="@string/a_details_confirmButton"
        android:layout_gravity="right"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/a_newCancelButton"
        android:text="@string/a_details_cancelButton"
        android:layout_gravity="right"/>

</LinearLayout>